Repairs the delay of the server accepting the second bytebuf. The cause of the problem is unknown